fix about section overflow

--- a/src/index.css
+++ b/src/index.css
@@ -18,18 +18,12 @@
 * {
   cursor: none;
 }
-body {
-  overflow-x: hidden;
-  width: 100vw;
-  height: 100vh;
-  
-}
+
 .cursor {
   background-color: #84868a2f;
   height: 32px;
   width: 32px;
   border: 5px solid #5cf6ff;
-  /* transform: translateY; */
   transition: all 0.1s ease-out;
   position: fixed;
   top: 0;
